// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AgentConfig validateConfig should validate default configuration 1`] = `
{
  "approval": {
    "autoApproveSafeTasks": true,
    "level": "destructive",
    "maxAutoApprovalCost": 5,
  },
  "autoApproveSafeTasks": true,
  "autoSaveInterval": 30000,
  "continueOnCompletion": false,
  "continuousImprovement": {
    "maxCycles": 0,
    "sleepTimeBetweenTasks": 5000,
    "sleepTimeOnNoTasks": 60000,
  },
  "destructiveOperations": [
    "delete",
    "force-push",
    "reset",
  ],
  "discovery": {
    "cacheTime": 300000,
    "checkChanges": true,
    "enabledStrategies": [
      "build-errors",
      "failing-tests",
      "type-errors",
      "lint-issues",
    ],
  },
  "enableProgress": true,
  "maxAutoApprovalCost": 5,
  "maxConcurrency": 1,
  "maxIterations": 0,
  "pauseOnError": true,
  "requireApprovalFor": "destructive",
  "safety": {
    "blockDestructive": true,
    "enabledChecks": [],
    "maxFileSize": 10485760,
  },
  "strategy": "goal-directed",
  "timeout": 0,
  "workingBranch": "main",
}
`;

exports[`AgentConfig mergeConfig should merge configurations correctly 1`] = `
{
  "approval": {
    "autoApproveSafeTasks": true,
    "level": "destructive",
    "maxAutoApprovalCost": 5,
  },
  "autoApproveSafeTasks": true,
  "autoSaveInterval": 30000,
  "continueOnCompletion": false,
  "continuousImprovement": {
    "maxCycles": 0,
    "sleepTimeBetweenTasks": 5000,
    "sleepTimeOnNoTasks": 60000,
  },
  "destructiveOperations": [
    "delete",
    "force-push",
    "reset",
  ],
  "discovery": {
    "cacheTime": 300000,
    "checkChanges": true,
    "enabledStrategies": [
      "build-errors",
      "failing-tests",
      "type-errors",
      "lint-issues",
    ],
  },
  "enableProgress": true,
  "maxAutoApprovalCost": 5,
  "maxConcurrency": 1,
  "maxIterations": 100,
  "pauseOnError": true,
  "requireApprovalFor": "destructive",
  "safety": {
    "blockDestructive": true,
    "enabledChecks": [],
    "maxFileSize": 10485760,
  },
  "strategy": "continuous-improvement",
  "timeout": 0,
  "workingBranch": "main",
}
`;

exports[`AgentConfig mergeConfig should merge nested objects correctly 1`] = `
{
  "maxCycles": 0,
  "sleepTimeBetweenTasks": 5000,
  "sleepTimeOnNoTasks": 120000,
}
`;
